feat(search): Добавлен поиск по курсам Поддержка query-параметра 'querySearch', обновлена документация метода /course Обновлен скрипт копирования (с заменой файлов)
