# src/controllers/CourseController.ts
@@ -19,48 +19,68 @@ export default class CourseController extends BaseController<ICourse> {
 		@Req() req: Request,
 		@Res() res: Response
 	): Promise<any | Response> {
-		if (req.query.pageSize) {
-			const pageNumber = isNaN(Number(req.query.pageNumber))
-					? 1
-					: Number(req.query.pageNumber),
-				pageSize = Number(req.query.pageSize);
-			return await this.courseModel.countDocuments().then((count) => {
-				return this.courseModel
-					.find({})
-					.skip(pageNumber > 0 ? (pageNumber - 1) * pageSize : 0)
-					.limit(pageSize > 0 ? pageSize : 10)
-					.then((data) => {
-						const nextPage = `/courses/?pageSize=${pageSize}&pageNumber=${
-							pageNumber + 1
-						}`;
-						const dataObject: { [k: string]: any } = {};
+		let findConditions: { [k: string]: any } = {},
+			sortConditions: { [k: string]: any } = {},
+			projection: { [k: string]: any } = {
+				_id: 0
+			},
+			params: { [k: string]: any } = {
+				pageNumber: req.query.pageNumber,
+				pageSize: req.query.pageSize
+			};
 
-						if (count > pageNumber * pageSize) {
-							dataObject.nextPage = nextPage;
-						}
-						dataObject.courses = data;
-
-						return res.status(200).send(dataObject);
-					});
-			});
+		if (req.query.searchQuery) {
+			const searchQuery = req.query.searchQuery.toString();
+			findConditions = { $text: { $search: searchQuery } };
+			projection.textScore = {
+				$meta: "textScore"
+			};
+			params.searchQuery = searchQuery;
+			sortConditions = { score: { $meta: "textScore" } };
 		}
 
-		return await this.courseModel.countDocuments().then((count) => {
-			const limit = 10;
+		const dataObject = await this.getDocumentsWithPagination(params, findConditions, projection, sortConditions);
+		return res.status(200).send(dataObject);
+	}
+
+	public async getDocumentsWithPagination(params: any, findConditions: any, projection: any, sortConditions: any = {}) {
+		if (params.pageSize) {
+			params.pageNumber = isNaN(Number(params.pageNumber))
+				? 1
+				: Number(params.pageNumber);
+			params.pageSize = Number(params.pageSize);
+		} else {
+			params.pageSize = 10;
+			params.pageNumber = 1;
+		}
+
+		return await this.courseModel.find(findConditions).countDocuments().then((count) => {
 			return this.courseModel
-				.find({})
-				.limit(limit)
+				.find(findConditions, projection)
+				.sort(sortConditions)
+				.skip(params.pageNumber > 0 ? (params.pageNumber - 1) * params.pageSize : 0)
+				.limit(params.pageSize > 0 ? params.pageSize : 10)
 				.then((data) => {
-					const nextPage = `/courses/?pageSize=${limit}&pageNumber=2`;
 					const dataObject: { [k: string]: any } = {};
 
-					if (count > 10) {
-						dataObject.nextPage = nextPage;
+					if (count > params.pageNumber * params.pageSize) {
+						params.pageNumber += 1;
+						dataObject.nextPage = `/courses/?` + objectToQueryString(params);
 					}
 					dataObject.courses = data;
 
-					return res.status(200).send(dataObject);
+					return dataObject;
 				});
 		});
 	}
+}
+
+function objectToQueryString(obj: any) {
+	var str = [];
+	for (var p in obj) {
+		if (obj.hasOwnProperty(p)) {
+			str.push(encodeURIComponent(p) + "=" + encodeURIComponent(obj[p]));
+		}
+	}
+	return str.join("&");
 }
